--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "description": "Marketing site for Brown Bear Mutual",
   "scripts": {
-    "start": "gulp watch:html",
-    "build:html" : "gulp build:html"
+    "start": "npm run server & gulp watch:html",
+    "build:html": "gulp build:html",
+    "server": "browser-sync start --directory -s './dist/' -f './dist/'"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/brownbearmutual/marketing-site#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.8",
     "gulp-front-matter": "^1.3.0",
     "gulp-markdown": "^1.2.0",
     "pug": "^2.0.0-beta11",
