--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/brownbearmutual/marketing-site#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
     "gulp-front-matter": "^1.3.0",
     "gulp-markdown": "^1.2.0",
     "pug": "^2.0.0-beta11",
