--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.0",
   "description": "Marketing site for Brown Bear Mutual",
   "scripts": {
-    "start": "npm run server & gulp watch:html",
+    "start": "npm run server & npm run watch",
     "build:html": "gulp build:html",
+    "build:css": "node-sass ./src/styles/ -o ./dist/",
+    "build": "npm run build:html & npm run build:css",
+    "watch:html": "gulp watch:html",
+    "watch:css": "node-sass -w ./src/styles/ -o ./dist/",
+    "watch": "npm run watch:html & npm run watch:css",
     "server": "browser-sync start --directory -s './dist/' -f './dist/'"
   },
   "repository": {
@@ -22,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-front-matter": "^1.3.0",
     "gulp-markdown": "^1.2.0",
+    "node-sass": "^4.5.0",
     "pug": "^2.0.0-beta11",
     "through2": "^2.0.3"
   }
