Fix issue with server running in background
Seems like having `npm run server` on the left side of the `&` symbol
(which is used to run the two scripts in parallel) caused the process to
run in the background, which made it a pain to find and kill. Putting it
on the right side seems to have fixed this issue.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Marketing site for Brown Bear Mutual",
   "scripts": {
-    "start": "npm run server & npm run watch",
+    "start": "npm run watch & npm run server",
     "build:html": "gulp build:html",
     "build:css": "node-sass ./src/styles/ -o ./dist/",
     "build": "npm run build:html & npm run build:css",
