--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp": "^3.9.1",
     "gulp-front-matter": "^1.3.0",
     "gulp-markdown": "^1.2.0",
+    "imagemin-cli": "^3.0.0",
     "node-sass": "^4.5.0",
     "pug": "^2.0.0-beta11",
     "rimraf": "^2.6.1",
