--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "chokidar-cli": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-front-matter": "^1.3.0",
-    "gulp-markdown": "^1.2.0",
+    "gulp-util": "^3.0.8",
     "imagemin-cli": "^3.0.0",
+    "markdown-it": "^8.3.1",
+    "markdown-it-attrs": "^0.8.0",
     "node-sass": "^4.5.0",
     "pug": "^2.0.0-beta11",
     "rimraf": "^2.6.1",
